// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slot renders a red slot correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-c82c2887-0 KEhzL"
    data-testid="slot"
    value="USER_ROLE_RED"
  />
</DocumentFragment>
`;

exports[`Slot renders a yellow slot correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-c82c2887-0 kasYuU"
    data-testid="slot"
    value="USER_ROLE_YELLOW"
  />
</DocumentFragment>
`;

exports[`Slot renders an empty slot correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-c82c2887-0 dsecsa"
    data-testid="slot"
  />
</DocumentFragment>
`;
